[package]
name = "zenoh-bridge-tcp"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[lib]
name = "zenoh_bridge_tcp"
path = "src/lib.rs"

[[bin]]
name = "zenoh-bridge-tcp"
path = "src/main.rs"

[dependencies]
zenoh = "1.6.2"
zenoh-ext = { version = "1.6.2", features = ["unstable"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
httparse = "1.9"
tls-parser = "0.12"
thiserror = "1"
tokio-tungstenite = "0.26"
futures-util = "0.3"

[dev-dependencies]
tokio-stream = "0.1"
tower = "0.4"
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
hyper = { version = "1.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rcgen = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webpki-roots = "0.26"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
